Tried both Custom vue and established Quill

--- a/client/src/css/base.scss
+++ b/client/src/css/base.scss
@@ -136,6 +136,11 @@ text-decoration: solid;
 background-color: #eaf2fb;
 }
 
+s {
+  text-decoration: solid;
+  background-color: #eaf2fb;
+}
+
 code {
   background-color:#eee;
   color: black;
@@ -154,8 +159,8 @@ code {
     // center
   margin-left: auto;
   margin-right: auto;
-  width: 30%;
-  height: 30%;
+  width: 50%;
+  height: 50%;
   margin-top: 1em;
   margin-bottom: 2em;
 }
