--- a/client/src/css/base.scss
+++ b/client/src/css/base.scss
@@ -2,6 +2,7 @@
 
 header {
   width: 100%;
+  height: 7em;
   left: 0;
   background-color: white;
   z-index: 100;
@@ -75,10 +76,6 @@ details[open] summary:after {
   font-size: 1.1em;
 }
 
-.seperator {
-  color: #D0D0D0;
-  border-top: 0.25em solid;
-}
 
 // Interactive header options
 .options {
@@ -108,8 +105,12 @@ article {
   background: white;
   box-shadow: rgba(0,0,0,.05) 0 3px 15px;
   display: inline-block;
-  margin-top: 5em;
+  margin-top: 3em;
 
+}
+
+details summary::marker {
+  display:none;
 }
 
 .editor {
@@ -190,6 +191,35 @@ img {
 .scrolling {
   overflow: auto;
   max-height: 98%;
+}
+
+// Options
+
+.options{
+  position: absolute;
+}
+
+.options-imgs{
+  flex-direction: row;
+  display: inline-flex;
+}
+
+.options-img{
+  margin: 0.5em;
+  width: 28%;
+  height: 28%;
+  margin: 0;
+  // top | right | bottom | left
+  padding: 0 0.5em 0 0.7em;
+}
+
+.options-imgs-icon{
+  padding: 1.7em 0.3em;
+  outline: white;
+}
+
+.v-list-item {
+  padding: 0 0.4em;
 }
 
 // Ratings card
