--- a/client/src/css/base.scss
+++ b/client/src/css/base.scss
@@ -2,7 +2,7 @@
 
 header {
   width: 100%;
-  height: 7em;
+  height: auto;
   left: 0;
   background-color: white;
   z-index: 100;
@@ -22,8 +22,6 @@ header .inner-heading {
 
 .logo {
   height: 3em;
-  position: fixed;
-  top: 2em;
   border: 0;
   display: block;
   margin: 0;
@@ -103,8 +101,7 @@ summary {
 
 .header-el {
   display: inline-block;
-  margin-right: 2em;
-  padding-right: 2em;
+  padding-right: 0.7em;
 }
 
 //  Article attributes taken from https://codepen.io/tomhodgins/pen/BKPJaN
