--- a/client/src/css/base.scss
+++ b/client/src/css/base.scss
@@ -51,7 +51,7 @@ a[data-title]:hover::after {
   position: absolute;
   padding: 1px 5px 2px 5px;
   text-decoration: none;
-  z-index: 100;
+  z-index: 1000;
 }
 
 .shadow:hover{
@@ -64,12 +64,9 @@ a[data-title]:hover::after {
 .description {
   width: 100%;
   left: 0;
-  background-color: #D0D0D0;
   text-align: center;
-  position: absolute;
-  top: 7.2em;
-  overflow: hidden;
-  display: list-item;
+  position: relative;
+  top: -5em;
   font-size: 1em;
 }
 
@@ -103,8 +100,17 @@ summary {
 
 .clean-format a{
   color: black;
-  text-decoration: none;
+  text-decoration: none !important;
   cursor: default;
+}
+
+// High-Quality text
+.clean-switch {
+  text-decoration: none;
+  // top | right | bottom | left
+  padding: 0;
+  margin: 0;
+  display: inherit;
 }
 
 // sec after options
@@ -138,6 +144,8 @@ details[open] summary::after {
 
 .editor {
   text-align: center;
+  top: -8em;
+  position: relative;
 }
 
 article p {
@@ -191,7 +199,7 @@ code {
 a,
 a label {
     cursor: pointer;
-    z-index: 100
+    z-index: 1000
 }
 
 .options span {
@@ -398,13 +406,9 @@ img {
 
 // Footer
 .footer {
-  display: block;
-  left: 0;
-  bottom: 0;
   width: 100%;
   text-align: center;
   background-color: #eee;
-  margin-top: 2em;
   font-size: 70%;
 }
 
