removing style timing

--- a/client/src/css/base.scss
+++ b/client/src/css/base.scss
@@ -119,6 +119,10 @@ summary {
   padding-left: 0.2em;
 }
 
+.header-style{
+  padding-right: 0.5em;
+}
+
 .header-el {
   display: inline-block;
   padding-right: 0.7em;
